--- a/.github/workflows/process_submission.yml
+++ b/.github/workflows/process_submission.yml
@@ -4,6 +4,9 @@ on:
   workflow_dispatch:
   repository_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   process:
     runs-on: ubuntu-latest
