--- a/.github/workflows/process_submission.yml
+++ b/.github/workflows/process_submission.yml
@@ -3,6 +3,8 @@ name: Process Submission
 on:
   workflow_dispatch:
   repository_dispatch:
+  issues:
+    types: [opened]
 
 permissions:
   contents: write
@@ -10,12 +12,6 @@ permissions:
 jobs:
   process:
     runs-on: ubuntu-latest
-    env:
-      VOLUNTEER_NAME: "John Doe"
-      VOLUNTEER_PHONE: "+1234567890"
-      VOLUNTEER_SHIFTS: '[{"date": "2025-07-07", "time": "18:00", "role": "Usher"}, {"date": "2025-07-09", "time": "09:00", "role": "Greeter"}]'
-      CLICKSEND_USERNAME: ${{ secrets.CLICKSEND_USERNAME }}
-      CLICKSEND_API_KEY: ${{ secrets.CLICKSEND_API_KEY }}
 
     steps:
       - name: Checkout repo
@@ -30,14 +26,65 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install pyyaml
 
-      - name: Process volunteer submission
+      - name: Parse issue and update volunteer_input.yaml
+        env:
+          ISSUE_BODY: ${{ github.event.issue.body }}
         run: |
-          python volunteer_schedule.py \
-            --name "$VOLUNTEER_NAME" \
-            --phone "$VOLUNTEER_PHONE" \
-            --shifts "$VOLUNTEER_SHIFTS" \
-            --notify_sms
+          echo "$ISSUE_BODY" > issue_body.txt
+
+          python -c "
+import yaml
+import json
+
+with open('issue_body.txt') as f:
+    body = f.read()
+
+# Extract fields
+def extract_field(label):
+    start = body.find(f'**{label}**:') + len(f'**{label}**:')
+    end = body.find('\\n', start)
+    return body[start:end].strip()
+
+name = extract_field('Full Name')
+phone = extract_field('Phone Number')
+shifts_json = body.split('**Shift Availability**:')[1].strip()
+shifts = json.loads(shifts_json)
+
+try:
+    with open('volunteer_input.yaml') as f:
+        data = yaml.safe_load(f) or []
+except FileNotFoundError:
+    data = []
+
+data.append({'name': name, 'phone': phone, 'shifts': shifts})
+
+with open('volunteer_input.yaml', 'w') as f:
+    yaml.dump(data, f, sort_keys=False)
+"
+
+      - name: Process each volunteer
+        run: |
+          python -c "
+import yaml
+import subprocess
+
+with open('volunteer_input.yaml') as f:
+    volunteers = yaml.safe_load(f)
+
+for v in volunteers:
+    name = v['name']
+    phone = v['phone']
+    shifts = v['shifts']
+    subprocess.run([
+        'python', 'volunteer_schedule.py',
+        '--name', name,
+        '--phone', phone,
+        '--shifts', str(shifts),
+        '--notify_sms'
+    ])
+"
 
       - name: Generate calendar files
         run: python generate_calendar.py
