--- a/.github/workflows/process-all-volunteers.yml
+++ b/.github/workflows/process-all-volunteers.yml
@@ -51,6 +51,11 @@ for v in volunteers:
       - name: Generate calendar files
         run: python generate_calendar.py
 
+      - name: Copy volunteer_schedule.json to docs/
+        run: |
+          mkdir -p docs
+          cp volunteer_schedule.json docs/volunteer_schedule.json
+
       - name: Commit calendar changes
         run: |
           git config user.name "github-actions"
