--- a/.github/workflows/process-all-volunteers.yml
+++ b/.github/workflows/process-all-volunteers.yml
@@ -30,9 +30,8 @@ jobs:
 
       - name: Process all volunteers from YAML
         run: |
-          python -c "import yaml, subprocess; \
-with open('volunteer_input.yaml') as f: volunteers = yaml.safe_load(f); \
-[subprocess.run(['python', 'volunteer_schedule.py', '--name', v['name'], '--phone', v['phone'], '--shifts', str(v['shifts']), '--notify_sms']) for v in volunteers]"
+          python -c "import yaml, subprocess; f = open('volunteer_input.yaml'); volunteers = yaml.safe_load(f); f.close(); \
+for v in volunteers: subprocess.run(['python', 'volunteer_schedule.py', '--name', v['name'], '--phone', v['phone'], '--shifts', str(v['shifts']), '--notify_sms'])"
 
       - name: Generate calendar files
         run: python generate_calendar.py
