--- a/.github/workflows/process_submission.yml
+++ b/.github/workflows/process_submission.yml
@@ -28,40 +28,39 @@ jobs:
           pip install -r requirements.txt
           pip install pyyaml
 
-      - name: Parse issue and update volunteer_input.yaml
+      - name: Write Python script to parse issue
+        run: |
+          echo "import yaml" > parse_issue.py
+          echo "import json" >> parse_issue.py
+          echo "import os" >> parse_issue.py
+          echo "" >> parse_issue.py
+          echo "body = os.environ['ISSUE_BODY']" >> parse_issue.py
+          echo "" >> parse_issue.py
+          echo "def extract_field(label):" >> parse_issue.py
+          echo "    start = body.find(f'**{label}**:') + len(f'**{label}**:')" >> parse_issue.py
+          echo "    end = body.find('\\n', start)" >> parse_issue.py
+          echo "    return body[start:end].strip()" >> parse_issue.py
+          echo "" >> parse_issue.py
+          echo "name = extract_field('Full Name')" >> parse_issue.py
+          echo "phone = extract_field('Phone Number')" >> parse_issue.py
+          echo "shifts_json = body.split('**Shift Availability**:')[1].strip()" >> parse_issue.py
+          echo "shifts = json.loads(shifts_json)" >> parse_issue.py
+          echo "" >> parse_issue.py
+          echo "try:" >> parse_issue.py
+          echo "    with open('volunteer_input.yaml') as f:" >> parse_issue.py
+          echo "        data = yaml.safe_load(f) or []" >> parse_issue.py
+          echo "except FileNotFoundError:" >> parse_issue.py
+          echo "    data = []" >> parse_issue.py
+          echo "" >> parse_issue.py
+          echo "data.append({'name': name, 'phone': phone, 'shifts': shifts})" >> parse_issue.py
+          echo "" >> parse_issue.py
+          echo "with open('volunteer_input.yaml', 'w') as f:" >> parse_issue.py
+          echo "    yaml.dump(data, f, sort_keys=False)" >> parse_issue.py
+
+      - name: Run parser
         env:
           ISSUE_BODY: ${{ github.event.issue.body }}
-        run: |
-          echo "$ISSUE_BODY" > issue_body.txt
-
-          python -c "
-import yaml
-import json
-
-with open('issue_body.txt') as f:
-    body = f.read()
-
-def extract_field(label):
-    start = body.find(f'**{label}**:') + len(f'**{label}**:')
-    end = body.find('\\n', start)
-    return body[start:end].strip()
-
-name = extract_field('Full Name')
-phone = extract_field('Phone Number')
-shifts_json = body.split('**Shift Availability**:')[1].strip()
-shifts = json.loads(shifts_json)
-
-try:
-    with open('volunteer_input.yaml') as f:
-        data = yaml.safe_load(f) or []
-except FileNotFoundError:
-    data = []
-
-data.append({'name': name, 'phone': phone, 'shifts': shifts})
-
-with open('volunteer_input.yaml', 'w') as f:
-    yaml.dump(data, f, sort_keys=False)
-"
+        run: python parse_issue.py
 
       - name: Commit updated volunteer_input.yaml
         run: |
