--- a/.github/ISSUE_TEMPLATE/volunteer_submission.yml
+++ b/.github/ISSUE_TEMPLATE/volunteer_submission.yml
@@ -31,7 +31,7 @@ body:
           {"date": "2025-07-07", "time": "18:00", "role": "Usher"},
           {"date": "2025-07-09", "time": "09:00", "role": "Greeter"}
         ]
-      placeholder: |
+      placeholder: >
         [
           {"date": "2025-07-07", "time": "18:00", "role": "Usher"},
           {"date": "2025-07-09", "time": "09:00", "role": "Greeter"}
