--- a/.github/ISSUE_TEMPLATE/volunteer_submission.yml
+++ b/.github/ISSUE_TEMPLATE/volunteer_submission.yml
@@ -25,7 +25,9 @@ body:
     id: shifts
     attributes:
       label: Shift Availability
-      description: Enter your available shifts in JSON format. Example: [{"date":"2025-07-07","time":"18:00","role":"Usher"}]
+      description: |
+        Enter your available shifts in JSON format. Example:
+        [{"date":"2025-07-07","time":"18:00","role":"Usher"}]
       placeholder: '[{"date":"YYYY-MM-DD","time":"HH:MM","role":"Role"}]'
     validations:
       required: true
