--- a/.github/ISSUE_TEMPLATE/volunteer_submission.yml
+++ b/.github/ISSUE_TEMPLATE/volunteer_submission.yml
@@ -27,7 +27,10 @@ body:
       label: Shift Availability
       description: |
         Enter your available shifts in JSON format. Example:
-        [{"date":"2025-07-07","time":"18:00","role":"Usher"}]
-      placeholder: '[{"date":"YYYY-MM-DD","time":"HH:MM","role":"Role"}]'
+        [
+          {"date":"2025-07-07","time":"18:00","role":"Usher"},
+          {"date":"2025-07-09","time":"09:00","role":"Greeter"}
+        ]
+      placeholder: '{"date":"YYYY-MM-DD","time":"HH:MM","role":"Role"}'
     validations:
       required: true
