--- a/.github/ISSUE_TEMPLATE/volunteer_submission.yml
+++ b/.github/ISSUE_TEMPLATE/volunteer_submission.yml
@@ -28,8 +28,8 @@ body:
       description: >
         Enter each shift on a new line in a readable format like:
 
-        Monday July 22, 6:00 PM – Usher
-        Saturday July 27, 9:00 AM – Greeter
-      placeholder: "e.g. Monday July 22, 6:00 PM – Usher"
+        Monday July 22, 2025, 6:00 PM – Usher  
+        Saturday July 27, 2025, 9:00 AM – Greeter
+      placeholder: "e.g. Monday July 22, 2025, 6:00 PM – Usher"
     validations:
       required: true
