--- a/.github/workflows/process_submission.yml
+++ b/.github/workflows/process_submission.yml
@@ -26,9 +26,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pyyaml
+          pip install pyyaml clicksend-client
 
       - name: Run parser
+        id: parse
         env:
           ISSUE_BODY: ${{ github.event.issue.body }}
         run: python parse_issue.py
@@ -38,8 +39,16 @@ jobs:
           git config user.name "github-actions"
           git config user.email "actions@github.com"
           git add volunteer_input.yaml
-          git commit -m "Append new volunteer submission"
+          git commit -m "Append new volunteer submission" || echo "No changes to commit"
           git push
+
+      - name: Send SMS Notification
+        if: steps.parse.outputs.phone != ''
+        env:
+          CLICKSEND_USERNAME: ${{ secrets.CLICKSEND_USERNAME }}
+          CLICKSEND_API_KEY: ${{ secrets.CLICKSEND_API_KEY }}
+        run: |
+          python send_sms.py "${{ steps.parse.outputs.phone }}" "${{ steps.parse.outputs.name }}"
 
       - name: Trigger Process All Volunteers workflow
         uses: peter-evans/repository-dispatch@v3
