--- a/.github/workflows/parse-submission.yml
+++ b/.github/workflows/parse-submission.yml
@@ -26,35 +26,28 @@ jobs:
       - name: Extract volunteer name and shifts from issue body
         id: extract
         run: |
-          # Debug: print event JSON path and issue body
-          echo "Event JSON path: $GITHUB_EVENT_PATH"
+          # For debugging: show the event file contents
+          echo "GITHUB_EVENT_PATH contents:"
           cat "$GITHUB_EVENT_PATH"
 
-          # Extract issue body JSON
+          # Extract the full issue body
           ISSUE_BODY=$(jq -r .issue.body "$GITHUB_EVENT_PATH")
 
-          echo "---- Lines around 'Full Name' heading ----"
-          echo "$ISSUE_BODY" | grep -A3 -B3 "Full Name" || echo "No 'Full Name' heading found"
-
-          # Extract volunteer name after "Full Name" heading (more robust)
+          # Extract name under "### Full Name" heading (trim whitespace)
           NAME=$(echo "$ISSUE_BODY" | awk '
             BEGIN {found=0}
-            /Full Name/ {found=1; next}
+            /### Full Name/ {found=1; next}
             found && /^[[:space:]]*$/ {next}
             found {print; exit}
           ' | xargs)
 
-          # Extract shifts after "What shifts are you available for?" heading
+          # Extract shifts under "### What shifts are you available for?" heading until next heading
           SHIFTS=$(echo "$ISSUE_BODY" | awk '
-            /What shifts are you available for\?/ {flag=1; next}
+            /### What shifts are you available for\?/ {flag=1; next}
             /^### / {flag=0}
             flag
           ' | sed '/^\s*$/d' | tr '\n' ' ' | xargs)
 
-          echo "Extracted Name: '$NAME'"
-          echo "Extracted Shifts: '$SHIFTS'"
-
-          # Output variables for next steps
           echo "name=$NAME" >> $GITHUB_OUTPUT
           echo "shifts=$SHIFTS" >> $GITHUB_OUTPUT
 
@@ -62,4 +55,5 @@ jobs:
         run: |
           echo "Name: '${{ steps.extract.outputs.name }}'"
           echo "Shifts: '${{ steps.extract.outputs.shifts }}'"
+
           python parse_issue.py --name "${{ steps.extract.outputs.name }}" --shifts "${{ steps.extract.outputs.shifts }}"
