--- a/.github/workflows/parse-submission.yml
+++ b/.github/workflows/parse-submission.yml
@@ -18,9 +18,10 @@ jobs:
           python-version: 3.11
 
       - name: Install dependencies
-        run: pip install clicksend-client ics pyyaml
+        run: |
+          pip install clicksend-client ics pyyaml
 
-      - name: Extract volunteer name, phone, and shifts
+      - name: Extract volunteer name and shifts from issue body
         id: extract
         run: |
           ISSUE_BODY=$(jq -r .issue.body "$GITHUB_EVENT_PATH")
@@ -29,26 +30,44 @@ jobs:
           echo "$ISSUE_BODY"
           echo "-----"
 
-          NAME=$(echo "$ISSUE_BODY" | sed -n '/👤 Name:/ {n;p;}' | xargs)
-          PHONE=$(echo "$ISSUE_BODY" | sed -n '/📱 Phone:/ {n;p;}' | xargs)
-          SHIFTS=$(echo "$ISSUE_BODY" | awk '/📆 Shifts:/ {flag=1; next} /^$/ {flag=0} flag' | xargs)
+          NAME=$(echo "$ISSUE_BODY" | sed -n '/### Full Name/{n;p;}' | xargs)
+          PHONE=$(echo "$ISSUE_BODY" | sed -n '/### Phone Number/{n;p;}' | xargs)
+
+          SHIFTS=$(echo "$ISSUE_BODY" | awk '/### What shifts are you available for\?/{flag=1; next} /^### /{flag=0} flag')
+          CLEANED_SHIFTS=$(echo "$SHIFTS" | sed '/^\s*$/d')
 
           echo "👤 Name: $NAME"
           echo "📱 Phone: $PHONE"
-          echo "📆 Shifts: $SHIFTS"
+          echo "📆 Shifts:"
+          echo "$CLEANED_SHIFTS"
 
-          if [ -z "$NAME" ] || [ -z "$SHIFTS" ]; then
+          if [ -z "$NAME" ] || [ -z "$CLEANED_SHIFTS" ]; then
             echo "❌ Error: Missing required 'name' or 'shifts'"
             exit 1
           fi
 
           echo "name=$NAME" >> $GITHUB_OUTPUT
           echo "phone=$PHONE" >> $GITHUB_OUTPUT
-          echo "shifts=$SHIFTS" >> $GITHUB_OUTPUT
+          echo "shifts<<EOF" >> $GITHUB_OUTPUT
+          echo "$CLEANED_SHIFTS" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
 
-      - name: Run parse_issue.py
+      - name: Run parse_issue.py script
         run: |
+          echo "✅ Running submission parser..."
           python parse_issue.py \
             --name "${{ steps.extract.outputs.name }}" \
             --phone "${{ steps.extract.outputs.phone }}" \
             --shifts "${{ steps.extract.outputs.shifts }}"
+
+      - name: Trigger dispatch workflow
+        uses: peter-evans/repository-dispatch@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.repository }}
+          event-type: process-volunteer
+          client-payload: |
+            {
+              "name": "${{ steps.extract.outputs.name }}",
+              "phone": "${{ steps.extract.outputs.phone }}"
+            }
